test/Fail/Issue6651-UnivSort-SetOmega1-Prop.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Has PTS rule: (_8 , funSort _8 _8) (blocked on _8)
  Has PTS rule: (A,_8) (blocked on _8)
  univSort _8 =< Setω₁ (blocked on _8)
  univSort _8 = Setω₁ (blocked on _8)
  _9 is a sort (blocked on _8)

Issue6651-UnivSort-SetOmega1-Prop.agda:16.16-21: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue6651-UnivSort-SetOmega1-Prop.agda:16.16-17
  Issue6651-UnivSort-SetOmega1-Prop.agda:16.20-21
